[package]
name = "usfx_test"
version = "0.2.1"
edition = "2021"
publish = false
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Simple program to test USFX lib"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
usfx = { version = "0.1.5", features = ["serde"] }
cpal = "0.15.3"
anyhow = "1.0.82"
pixels-graphics-lib = {version = "0.19.0", default-features = false, features = ["window_prefs", "scenes"] }
indexmap = "2.2.6"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
chrono = { version = "0.4.38", features = ["alloc", "std", "clock", "serde"] }
env_logger = "0.11.3"
log = "0.4.21"